--- a/SSL.ipynb
+++ b/SSL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SSL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMW5SjVAcCaNIv9T2OMENUY",
+      "authorship_tag": "ABX9TyOTf9cRftx7fpJSn6/eSYYf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -20,6 +20,7 @@
         "2b383cb1988a4baeab13b4fdf54f134f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HBoxView",
             "_dom_classes": [],
@@ -41,6 +42,7 @@
         "0c6f89a189034e0d881bd0b2fc8bd7d6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -92,6 +94,7 @@
         "5b4bab039f024bd8aab7f5413a2deaff": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_da451bb22f6a4a9eacdee017a399e7de",
@@ -112,6 +115,7 @@
         "6e3d74dc6d994fcf924eb449428555fe": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
             "style": "IPY_MODEL_0967d7d8b70d497192d18159038f67dd",
@@ -135,6 +139,7 @@
         "f9e54dbf6c4e4a1f9b12deedfda88f5a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_4671f685c82646bfba59722f064230d9",
@@ -155,6 +160,7 @@
         "da451bb22f6a4a9eacdee017a399e7de": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -169,6 +175,7 @@
         "b1540df2b4144b408c1b12d2fe925292": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -220,6 +227,7 @@
         "0967d7d8b70d497192d18159038f67dd": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "ProgressStyleModel",
@@ -235,6 +243,7 @@
         "98205708c5034b95b6918cd04d2d0146": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -286,6 +295,7 @@
         "4671f685c82646bfba59722f064230d9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -300,6 +310,7 @@
         "ee26eccda1d840188910fe6c3cd9c693": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -351,6 +362,7 @@
         "4acc3cd54348422f945c92ea664e16b0": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HBoxView",
             "_dom_classes": [],
@@ -372,6 +384,7 @@
         "1f0642b555634234aab793fba3ffb3f9": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -423,6 +436,7 @@
         "fa912b099ad74b37885804c60cbdbbb3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_fc4c15ee10c64989a6519c00e62795ec",
@@ -443,6 +457,7 @@
         "d85d3816ea6742b882e8832d990269f3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
             "style": "IPY_MODEL_68710f2f76a048eb9f29ed5a37ac85fb",
@@ -466,6 +481,7 @@
         "f96bd29fafb04af28d7ff9277307f375": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_9946982efdd64f88baeae3e392325388",
@@ -486,6 +502,7 @@
         "fc4c15ee10c64989a6519c00e62795ec": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -500,6 +517,7 @@
         "4e5c36e1416648c3ba6b524ab02dbba8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -551,6 +569,7 @@
         "68710f2f76a048eb9f29ed5a37ac85fb": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "ProgressStyleModel",
@@ -566,6 +585,7 @@
         "9e5b6fc456744655b4b4e1ef7b74c07e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -617,6 +637,7 @@
         "9946982efdd64f88baeae3e392325388": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -631,6 +652,7 @@
         "ff0c1689f0e34fcea3cd792cda0a2313": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -695,6 +717,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nhL3MkosXC9g"
+      },
+      "source": [
+        "The following notebook contains the code for self supervised learning for the computer vision part.\n",
+        " Model used is a pretrained resnet 18.\n",
+        "\n",
+        "hyperparamaters for learning features:\n",
+        "\n",
+        "batch size=128\n",
+        "\n",
+        "learning rate=0.01\n",
+        "\n",
+        "num epoch=8\n",
+        "\n",
+        "tau(scaling parameter)= 0.2\n",
+        "\n",
+        "hyperparamaters for training linear model:\n",
+        "\n",
+        "batch size= 64\n",
+        "\n",
+        "learning rate=0.001\n",
+        "\n",
+        "num epoch=15\n",
+        "\n",
+        "train accuracy- 43%\n",
+        "test accuracy- 43%\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CUrynvCDRT-m"
@@ -714,11 +768,11 @@
         "import matplotlib.pyplot as plt\n",
         "import PIL\n",
         "from PIL import Image\n",
-        "from torchvision.models import resnet50\n",
+        "\n",
         "from torchvision.models import resnet18\n",
         "import torch.nn.functional as F"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +783,7 @@
       "source": [
         "device='cuda'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +803,7 @@
         "    ])\n",
         "transform=transforms.Compose([transforms.RandomResizedCrop(96),transforms.ToTensor()])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -776,7 +830,7 @@
         "\n",
         "        return img1, img2\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +865,7 @@
         "train_loader=DataLoader(train_data,shuffle=True,batch_size=64)\n",
         "test_loader=DataLoader(test_data,shuffle=True,batch_size=64)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,7 +913,7 @@
         "    def forward(self, x):\n",
         "        return x"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -890,7 +944,7 @@
         "        out = self.g(feature)\n",
         "        return F.normalize(out, dim=-1)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -942,7 +996,7 @@
         "\n",
         "        return loss"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,7 +1027,7 @@
         "criterion = nn.CrossEntropyLoss().to(device)\n",
         "optimizer = torch.optim.Adam(simclr_model.parameters(),lr=0.01)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1100,7 @@
         "          print (f'Epoch [{epoch+1}/{num_epochs}], Step [{i+1}/{total_steps}], Loss: {loss.item():.4f}')\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1084,7 +1138,7 @@
         "        out = self.fc(out)\n",
         "        return out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1098,7 +1152,7 @@
         "optimizer = torch.optim.Adam(classifier_model.parameters(),lr=0.001)\n",
         "num_epochs1=15"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1163,7 +1217,7 @@
         "    test_accu=test_loop(test_loader,classifier_model)\n",
         "    print(f'Epoch [{epoch+1}/{num_epochs1}], train_accuracy: {accu:.4f},test_accuracy: {test_accu:.4f} %')   \n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
